[build-system]
requires = [
    "scikit-build-core>=0.3.0",
    "mpich",
]
build-backend = "scikit_build_core.build"

[project]
name = "lammps"
dynamic = ["version"]
description = "unoffical LAMMPS Molecular Dynamics Python package"
authors = [
  {name = "The LAMMPS Developers", email = "developers@lammps.org"},
  {name = "Jinzhe Zeng", email = "jinzhe.zeng@ustc.edu.cn"},
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]
dependencies = [
    'importlib_metadata>=1.4; python_version < "3.8"',
]
requires-python = ">=3.7"
readme = "README.md"
keywords = ["lammps"]

[project.optional-dependencies]
mpi = ["mpich"]

[project.urls]
repository = "https://github.com/njzjz/lammps-wheel"
lammps_repository = "https://github.com/lammps/lammps"
lammps_documentation = "https://docs.lammps.org/"

[project.scripts]
lmp = "lammps.executable:lmp"

[tool.scikit-build]
wheel.install-dir = "lammps"
wheel.py-api = "py2.py3"
cmake.args = [
    "-D LAMMPS_VERSION=stable_22Jul2025",
    "-D LAMMPS_EXCEPTIONS=ON",
    "-D BUILD_SHARED_LIBS=ON",
]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]

[tool.cibuildwheel]
build = ["cp311-*"]
skip = ["*-win32", "*-manylinux_i686", "*-musllinux*"]
build-verbosity = "1"
test-command = "lmp -h && python {project}/tests/test_import.py"
test-extras = ["mpi"]

[tool.cibuildwheel.linux]
before-all = [
    "yum install -y wget libpng12 zlib-devel libjpeg-turbo-devel",
]
repair-wheel-command = [
    "uvx --with 'patchelf<0.17' auditwheel repair -w {dest_dir} {wheel} --exclude libmpi.so* --exclude libucp.so* --exclude libuct.so* --exclude libucs.so* --exclude libucm.so*",
]
[tool.cibuildwheel.linux.environment]

[tool.cibuildwheel.macos]
repair-wheel-command = """delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel} --ignore-missing-dependencies"""
environment.MACOSX_DEPLOYMENT_TARGET = "11.0"

[tool.cibuildwheel.windows]
test-command = "python {project}/tests/test_import.py"
